examples/invalid/total_forbidden_repeat.sarif
fn main() -> I32 {
    repeat 2 {
    };
    0
}
